(fix): cleaned up html and css

--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -60,6 +60,7 @@
       justify-content: start;
       align-items: flex-start;
     }
+
   }
 
   &__portrait {
@@ -86,6 +87,7 @@
   .button {
     color: white;
     justify-content: center;
+    margin-top: 50px; 
   }
 
   &__signature {
