--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -47,12 +47,12 @@
   }
 
   &__infotext {
+    display: flex;
     font-family: "Montserrat";
     color: rgba(76, 32, 22, 255);
     font-size: 12px;
     line-height: 1.9em;
     font-weight: 400;
-    text-align: center;
     padding-top: 15px;
     justify-content: center;
     @include mixins.desktop {
@@ -85,9 +85,8 @@
   }
 
   .button {
-    color: white;
-    justify-content: center;
-    margin-top: 50px; 
+    color: white;  
+    margin-top: 30px; 
   }
 
   &__signature {
